--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
+    "classnames": "^2.5.1",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
