--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "bunx oxlint --fix; bunx prettier . --write"
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.3",
@@ -25,7 +25,7 @@
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "oxlint": "^0.2.8",
+    "prettier": "^3.2.5"
   }
 }
