--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "bunx oxlint --fix; bunx prettier . --write"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.5",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
