--- a/package.json
+++ b/package.json
@@ -1,35 +1,19 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "bunx oxlint --fix; bunx prettier . --write"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.42.5",
-    "@vercel/analytics": "^1.1.3",
-    "@vercel/speed-insights": "^1.0.9",
-    "classnames": "^2.5.1",
-    "dotenv": "^16.4.5",
-    "next": "^14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.70.0",
-    "supabase": "^1.163.2"
+    "nuxt": "latest",
+    "vue": "latest"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "oxlint": "^0.2.8",
-    "prettier": "^3.2.5"
+    "sass": "latest"
   }
 }
