feat: enable analytics
I've chosen to do this as I would like to understand the performance of my website.

If you feel uncomfortable with this, please use a content blocker like Ublock Origin to block requests to Vercel's servers.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vercel/analytics": "latest",
+    "@vercel/speed-insights": "latest",
     "nuxt": "latest",
     "vue": "latest"
   },
