--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@vercel/analytics": "latest",
-    "@vercel/speed-insights": "latest",
-    "nuxt": "latest",
-    "vue": "latest"
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
+    "nuxt": "^3.12.3",
+    "vue": "^3.4.31"
   },
   "devDependencies": {
-    "prettier": "latest",
-    "sass": "latest"
+    "prettier": "^3.3.3",
+    "sass": "^1.77.8"
   }
 }
