--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "nuxt": "^3.12.3",
+    "nuxt-security": "^2.0.0-rc.9",
     "vue": "^3.4.31"
   },
   "devDependencies": {
