--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/image": "^1.7.0",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.12",
-    "nuxt": "^3.12.3",
-    "nuxt-security": "^2.0.0-rc.9",
-    "vue": "^3.4.32"
+    "@nuxt/image": "^1.8.1",
+    "@vercel/analytics": "^1.3.2",
+    "@vercel/speed-insights": "^1.0.14",
+    "nuxt": "^3.13.2",
+    "nuxt-security": "^2.0.0",
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "prettier": "^3.3.3",
-    "sass": "^1.77.8"
+    "sass": "^1.80.5"
   }
 }
