--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.4.0",
     "@nuxt/image": "^1.10.0",
+    "@types/node": "^22.14.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "nuxt": "^3.16.2",
